TETRAP-2084 - Fixed issues with modal alignment

--- a/tetrapak-customerhub/ui.dev/src/source/templates/components/ordersearch/_orderSearch.scss
+++ b/tetrapak-customerhub/ui.dev/src/source/templates/components/ordersearch/_orderSearch.scss
@@ -60,17 +60,13 @@
     &__modal {
         .tpmol-modal-footer {
             justify-content: center;
+            padding-top: 0;
         }
         .lightpick {
             @include top(-24px);
             position: relative;
         }
         &-dialog {
-            max-width: calc(100% - #{convert-to-rem(48px)});
-            margin: auto;
-            @media #{$tablet} {
-                @include max-width(500px);
-            }
             @media #{$desktop} {
                 @include max-width(663px);
             }
